# warsaw-free-events-analysis

./: README.md  analiza-wydarzen.ipynb  app.py  pyproject.toml
data/: events_data.csv
scrapers/: waw4free.py
templates/: index.html  map.html
